working on product page !

--- a/src/app/components/welcome-page/slideshow/slideshow.component.html
+++ b/src/app/components/welcome-page/slideshow/slideshow.component.html
@@ -6,19 +6,19 @@
     </ul>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="image-carousel" src="../../../assets/cover-image.jpg" alt="Bakery & Dairy">
+        <img class="image-carousel" src="../../../../assets/cover-image.jpg" alt="Bakery & Dairy">
         <div class="carousel-caption">
           <h3>Bakery and Dairy</h3>
         </div>   
       </div>
       <div class="carousel-item">
-        <img class="image-carousel" src="../../../assets/fruits-veggies.jpg" alt="Fruits & vegetables">
+        <img class="image-carousel" src="../../../../assets/fruits-veggies.jpg" alt="Fruits & vegetables">
         <div class="carousel-caption">
           <h3>Fruits & Vegetables</h3>
         </div>   
       </div>
       <div class="carousel-item">
-        <img class="image-carousel" src="../../../assets/sea-food.jpg" alt="Seafoods">
+        <img class="image-carousel" src="../../../../assets/sea-food.jpg" alt="Seafoods">
         <div class="carousel-caption">
           <h3>Seafoods</h3>
         </div>   
