--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -14,7 +14,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Products</a>
+              <a class="nav-link" href="/products" routerLink="/products" >Products</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Checkout</a>
