--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -27,10 +27,9 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" id="navbarDropdown"
                 data-toggle="dropdown" href="#" role="button"
-                aria-haspopup="true" aria-expanded="false">Cart<span class="caret"></span></a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <span>The Cart Placeholder</span>
-              </div>
+                aria-haspopup="true" aria-expanded="false">Cart: 2 item(s) - $20.00
+                <span class="caret"></span></a>
+                <app-card-placeholder></app-card-placeholder>
             </li>
         </ul>
       </div>
