--- a/src/app/components/product-page/product-page.component.html
+++ b/src/app/components/product-page/product-page.component.html
@@ -5,8 +5,8 @@
             <app-quick-shop></app-quick-shop>
             <app-categories></app-categories>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-4">
-            
+        <div class="col-xs-12 col-sm-8">
+           <app-products></app-products>
         </div>
     </div>
 </div>
