--- a/src/app/components/welcome-page/items/items.component.html
+++ b/src/app/components/welcome-page/items/items.component.html
@@ -1,57 +1,14 @@
-<div class="container-fluid">
-    <div class="row center-block" >
-        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-          <div class="card card-items">
-            <img class="card-img-top center-block product-item items-image" src="http://placehold.it/270x171" alt="">
-            <div class="card-block">
-              <h1 class="card-title">Bakery</h1>
-              <p class="card-text">The best cupcakes, cookies, cakes,
-                pies, cheesecakes, fresh bread,
-                biscotti, muffins, bagels, fresh coffee
-                and more.</p>
-              <a href="#"><button class="btn btn-primary">Browse</button></a>
-            </div>
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-          <div class="card card-items">
-            <img class="card-img-top center-block product-item items-image" src="http://placehold.it/270x171" alt="">
-            <div class="card-block">
-              <h1 class="card-title">Bakery</h1>
-              <p class="card-text">The best cupcakes, cookies, cakes,
-                pies, cheesecakes, fresh bread,
-                biscotti, muffins, bagels, fresh coffee
-                and more.</p>
-              <a href="#"><button class="btn btn-primary">Browse</button></a>
-            </div>
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-          <div class="card card-items">
-            <img class="card-img-top center-block product-item items-image" src="http://placehold.it/270x171" alt="">
-            <div class="card-block">
-              <h1 class="card-title">Bakery</h1>
-              <p class="card-text">The best cupcakes, cookies, cakes,
-                pies, cheesecakes, fresh bread,
-                biscotti, muffins, bagels, fresh coffee
-                and more.</p>
-              <a href="#"><button class="btn btn-primary">Browse</button></a>
-            </div>
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-          <div class="card card-items">
-            <img class="card-img-top center-block product-item items-image" src="http://placehold.it/270x171" alt="">
-            <div class="card-block">
-              <h1 class="card-title">Bakery</h1>
-              <p class="card-text">The best cupcakes, cookies, cakes,
-                pies, cheesecakes, fresh bread,
-                biscotti, muffins, bagels, fresh coffee
-                and more.</p>
-              <a href="#"><button class="btn btn-primary">Browse</button></a>
-            </div>
-          </div>
-        </div>   
+
+  <div class="card card-items">
+    <img class="card-img-top center-block product-item items-image" src= "{{category.image}}" alt="{{category.title}}">
+    <div class="card-block">
+      <h1 class="card-title">{{category.title}}</h1>
+      <p class="card-text">{{category.desc}}</p>
+      <a (click)= "browse()" class="btn btn-primary">Browse</a>
     </div>
-</div>
+  </div>
+
+
+    
+
 
