--- a/src/app/components/welcome-page/welcome-page.component.html
+++ b/src/app/components/welcome-page/welcome-page.component.html
@@ -1,3 +1,11 @@
 <app-navigation></app-navigation>
 <app-slideshow></app-slideshow>
-<app-items></app-items>
+<div class="container-fluid">
+    <div class="row center-block">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3" *ngFor="let category of categories" >
+            <app-items [category]="category" (select)="selectCategories($event)"></app-items>
+        </div> 
+    </div>
+</div>
+
+
