--- a/src/app/components/product-page/quick-shop/quick-shop.component.html
+++ b/src/app/components/product-page/quick-shop/quick-shop.component.html
@@ -5,9 +5,9 @@
         </div>
         <div class="card-block">
             <div class="input-group">
-                <input type="text" placeholder="Search For..." class="form-control">
+                <input #search type="text" placeholder="Search For..." class="form-control">
                 <span class="input-group-btn">
-                    <button class="btn btn-secondary" type="button">Go!</button>
+                    <button class="btn btn-secondary" type="button" (click)= "searchProduct(search.value)">Go!</button>
                 </span>
             </div>
         </div>
