--- a/src/app/components/product-page/categories/categories.component.html
+++ b/src/app/components/product-page/categories/categories.component.html
@@ -5,7 +5,7 @@
         </div>
         <div class="card-block">
             <div class="list-group">
-                <a href="#" class="list-group-item" *ngFor="let category of categories" (click)= "filterProducts(category)">{{category.title}}</a>
+                <a class="list-group-item" *ngFor="let category of categories" (click)= "filterProducts(category)">{{category.title}}</a>
             </div>        
         </div>
     </div> 
