--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -17,7 +17,7 @@
               <a class="nav-link" href="/products" routerLink="/products" >Products</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Checkout</a>
+              <a class="nav-link" href="/checkout">Checkout</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Sign out</a>
