--- a/src/app/components/product-page/products/products.component.html
+++ b/src/app/components/product-page/products/products.component.html
@@ -14,7 +14,7 @@
                     <a class="btn btn-primary" (click)='addToCart(product)'>Buy Now 
                     </a>
                     <a class="btn btn-primary" style="margin-left: 10px;"
-                        [routerLink]="['/products', product.id]">Browse
+                        [routerLink]="['/products', product.id]">More Info
                     </a>
                     <hr>
                     <p class="card-text">{{product.desc}}</p>
